[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Robot.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Characters/Robot/RobotArmature.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/GUIgfx/heart.png" type="Texture" id=4]








[sub_resource type="CapsuleShape" id=1]
radius = 0.707686
height = 1.17122

[sub_resource type="Animation" id=2]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="RobotComplete" instance=ExtResource( 1 )]
transform = Transform( 0.998845, 0, 0.048059, 0, 1, 0, -0.048059, 0, 0.998845, -0.000336438, 1, 0.00857376 )
collision_layer = 16
collision_mask = 11
script = ExtResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 1.16415e-010, 0.308722, -1.30385e-008 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1 )
enabled = true
cast_to = Vector3( 0, -1, 50 )
collision_mask = 2

[node name="MeshInstance" parent="." index="2"]
transform = Transform( 0.999818, 0, -0.0190744, 0, 1, 0, 0.0190744, 0, 0.999818, 0, 0, 0 )
visible = false

[node name="CollisionShape" parent="." index="3"]
disabled = true

[node name="Forward" parent="." index="4"]
transform = Transform( 0.995823, 0, -0.0912994, 0, 1, 0, 0.0912994, 0, 0.995823, 0, 0.5, 2 )

[node name="CanFire" parent="." index="5"]
wait_time = 3.0

[node name="RobotArmature" parent="." index="6" instance=ExtResource( 3 )]
transform = Transform( 0.49941, 0, -0.0242898, 0, 0.5, 0, 0.0242898, 0, 0.49941, -0.04105, -1, 0.0527153 )
bones/1/bound_children = [  ]
bones/2/bound_children = [  ]
bones/7/bound_children = [  ]
bones/8/bound_children = [  ]
bones/9/bound_children = [  ]
bones/22/bound_children = [  ]
bones/23/bound_children = [  ]
bones/37/bound_children = [  ]
bones/38/bound_children = [  ]
bones/39/bound_children = [  ]
bones/41/bound_children = [  ]
bones/42/bound_children = [  ]

[node name="PositionAnimation" type="AnimationPlayer" parent="." index="7"]

[node name="Lives" type="Spatial" parent="." index="9"]

[node name="Life1" type="Sprite3D" parent="Lives" index="0"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 0.708, 1.222, 5.58794e-009 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lives/Life1" index="0"]
anims/Lose_Life = SubResource( 2 )

[node name="Life2" type="Sprite3D" parent="Lives" index="1"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, -3.00934e-008, 1.5, -2.79397e-009 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lives/Life2" index="0"]
anims/Lose_Life = SubResource( 3 )

[node name="Life3" type="Sprite3D" parent="Lives" index="2"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, -0.708, 1.222, 1.86265e-009 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Lives/Life3" index="0"]
anims/Lose_Life = SubResource( 4 )
